<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/themeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/current_theme"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

            <Spinner
                android:id="@+id/themeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/themeVariants"
                android:padding="16dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/endpointLoadText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/current_url_speedtest_load" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLoadEndpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textLoadEndpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"

                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/endpointUploadText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/current_url_speedtest_upload" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUploadEndpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUploadEndpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"

                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <CheckBox
                android:id="@+id/loadSpeedCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/measure_load_speed" />

            <CheckBox
                android:id="@+id/uploadSpeedCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/measure_upload_speed" />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

    </ViewFlipper>


</androidx.constraintlayout.widget.ConstraintLayout>